<resources>
    <string name="app_name">互联网编程</string>

    <string name="about_title">关于</string>
    <string name="about_apptitle">互联网编程 DEMO </string>
    <string name="about_author">&#169; 2017 王嘉维 2014180065</string>

    <string name="exp1_title">域名解析练习</string>
    <string name="exp1_desc1">
        在下方的文本框输入需要检查的地址（使用IP地址），
        点击【开始检测】按钮即可查询该地址是否为已知垃圾邮件发送者。
        \n注意：请在网络连通的情况下使用此工具！
    </string>
    <string name="exp1_wrapper1">点击重新测试网络连通性</string>
    <string name="exp1_wrapper2">正在测试网络连通性&#8230;</string>
    <string name="exp1_wrapper3">网络连通性差，请检查网络。\n点击重新测试网络连通性</string>
    <string name="exp1_input">请在此输入需要检测的IP地址</string>
    <string name="exp1_btn">开始检测</string>
    <string name="exp1_desc2">为何需要使用IP地址？</string>
    <string name="exp1_desc3">
        对于某些网站，其邮件服务器主机与Web服务器主机并不属于同一个IP地址。
        而我们使用RBL方法查询垃圾邮件发送者是基于IP地址查询的。
        若直接输入域名，将会被解析至Web服务器的IP地址，
        将不能正确地检测垃圾邮件发送者的身份。
    </string>

    <string name="exp2_title">文件下载</string>
    <string name="exp2_desc1">
        默认下载文件夹为SD卡根目录下Download文件夹。点击【浏览】按钮可更改下载文件夹。
        \n将需要下载的地址复制进剪贴板后，点击【粘贴】按钮将内容粘贴进下方输入框中（当然也可自行输入）。
        \n点击【解析并下载】按钮后程序将自动解析地址并将目标文件（若存在）下载至所选文件夹中。
        \n注意：请在网络连通的情况下使用此工具！
    </string>
    <string name="exp2_dir_hint">保存路径</string>
    <string name="exp2_dir_default">/download</string>
    <string name="exp2_dir_btn">浏览&#8230;</string>
    <string name="exp2_input">请在此输入URL</string>
    <string name="exp2_paste">粘贴</string>
    <string name="exp2_btn_resolve">仅解析</string>
    <string name="exp2_btn">解析并下载</string>
    <string name="exp2_prefix_result">解析结果：</string>
    <string name="exp2_exception_empty">输入的地址为空，请重新输入。</string>
    <string name="exp2_exception_unable_to_resolve">解析失败，请重新检查链接。</string>
    <string name="exp2_dig_stage_1_title">正在解析</string>
    <string name="exp2_dig_stage_1_msg">正在解析服务器</string>
    <string name="exp2_dig_stage_2_title">正在下载</string>
    <string name="exp2_dig_stage_2_msg">正在获取文件至</string>
    <string name="exp2_dig_stage_3_title">下载完成</string>
    <string name="exp2_dig_stage_3_msg">文件已保存至</string>
    <string name="exp2_dig_stage_3_btn_open">打开文件</string>
    <string name="exp2_dig_stage_3_btn_done">完成</string>

    <string name="exp4_title">URL网页抓取</string>
    <string name="exp4_address">请在此输入地址</string>
    <string name="exp4_address_exception">请正确输入地址！</string>
    <string name="exp4_address_not_supported_title">暂不支持的协议类型</string>
    <string name="exp4_address_not_supported_msg">暂不支持下载HTTPS协议的站点！</string>
    <string name="exp4_download_file_msg1">正在获取文件</string>
    <string name="exp4_download_file_msg2">至</string>
    <string name="exp4_download_take_times_msg">下载耗时高，请耐心等候&#8230;</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
